# voc_detection_system

./: .gitignore  README.md  platformio.ini  requirements.txt
ML_model/: Neural_Net.py
raspberry_pi_src/: ControlSystem.py  EnvironmentalChamber.py  LED_strip_controller.py  chamber.py  config.json  config_manager.py  fan_controller.py  fan_tester.py  main.py  mux.py  mux16.py  pyproject.toml  requirements.txt  system_test.py
raspberry_pi_src/config/: config.json  config_manager.py
raspberry_pi_src/control_sys/: ControlSystem.py  Demux.py  DiscordAlerts.py  EnvironmentalChamber.py  FanController.py  LEDStripController.py  Mux.py  SerialMonitor.py  ShiftRegister.py
raspberry_pi_src/shell_scripts/: git_push_data.sh  gpio_pwm.sh  pi_first_time_setup.sh  start_up.sh
raspberry_pi_src/src/pi_src/: __main__.py  gpio_test.py  main.py  pin_test.py  system_test.py  system_test2.py
raspberry_pi_src/src/pi_src/config/: config.json  config_manager.py  example_config.json
raspberry_pi_src/src/pi_src/control_sys/: ControlSystem.py  Demux.py  DiscordAlerts.py  EnvironmentalChamber.py  FanController.py  LEDBreather.py  SerialMonitor.py  ShiftRegister.py
raspberry_pi_src/src/pi_src/shell_scripts/: git_push_data.sh
raspberry_pi_src/src/raspbery_pi_src/: __main__.py  main.py  system_test.py
raspberry_pi_src/src/raspbery_pi_src/config/: config.json
raspberry_pi_src/src/raspbery_pi_src/control_sys/: ControlSystem.py  DiscordAlerts.py  FanController.py  LEDStripController.py  SerialMonitor.py
raspberry_pi_src/src/raspbery_pi_src/shell_scripts/: pi_first_time_setup.sh
(+22 files in other folders)
